# react-native-multitrack-player

./: .gitignore  README.md  package-lock.json  package.json  react-native-multitrack-player.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: JNI_MultiTrackPlayer.cpp
android/src/main/java/com/reactnativemultitrackplayer/: MultiTrackPlayerModule.kt  MultiTrackPlayerPackage.kt
cpp/: MultiTracksPlayer.cpp  MultiTracksPlayer.h  Track.cpp  Track.h
example/: app.json  metro.config.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/MultiTrackPlayerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MultiTrackPlayerExample.xcodeproj/: project.pbxproj
example/ios/MultiTrackPlayerExample.xcodeproj/xcshareddata/xcschemes/: MultiTrackPlayerExample.xcscheme
example/src/: App.tsx
example/src/atoms/Button/: index.tsx  styles.ts
example/src/atoms/Text/: index.tsx
example/src/molecules/PlayPauseButton/: index.tsx
example/src/molecules/TrackControl/: index.tsx  styles.ts
example/src/organisms/Footer/: index.tsx  styles.ts
example/src/organisms/Track/: index.tsx  styles.ts
example/src/screens/Player/: index.tsx  styles.ts  useTracks.ts
example/src/style/: colors.ts  elevation.ts  typeScale.ts
ios/: MultiTrackPlayerModule.h  MultiTrackPlayerModule.mm
src/: NativeMultiTrackPlayer.ts  index.ts
src/hooks/: useMultiTrackPlayer.ts
(+2 files in other folders)
